--- a/fp-service-orders/package.json
+++ b/fp-service-orders/package.json
@@ -10,24 +10,26 @@
   "dependencies": {
     "app-root-path": "^3.0.0",
     "chance": "^1.1.4",
+    "cross-env": "^7.0.2",
     "express": "^4.17.1",
     "express-healthcheck": "^0.1.0",
     "faker": "^4.1.0",
     "json-schema-faker": "^0.5.0-rcv.24",
     "path": "^0.12.7",
-    "swagger-express-mw": "^0.1.0",
+    "swagger-express-mw": "^0.7.0",
     "swagger-stats": "^0.95.17",
     "winston": "^3.2.1",
     "xmlbuilder": "^15.1.1"
   },
   "devDependencies": {
+    "cross-env": "^7.0.2",
     "genversion": "^2.2.1",
     "should": "^7.1.0",
     "supertest": "^1.0.0",
     "versiony": "^2.0.1"
   },
   "scripts": {
-    "start": "swagger_mockMode=true node app.js",
+    "start": "cross-env swagger_mockMode=true node app.js",
     "test": "swagger project test"
   }
 }
